[tool.poetry]
name = "currencyconverter"
version = "0.1.0"
description = ""
authors = ["tora-o <97511605+tora-o@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
